# shady

./: Cargo.toml  gfx.rs  ray.rs
src/: gfx.rs  main.rs  ray.rs  shader.rs
