[package]
name = "shady"
version = "0.1.0"
authors = ["Vitaly Kravchenko <vitalyx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
log = "0.4.11"
simple_logger = "1.6.0"
winit = "0.22.2"
gfx-hal = "0.6.0"
arrayvec = "0.5.1"
rayon = "1.3.1"
num = "0.3"
# clap = "3.0.0-beta.1"
minifb = "0.18.0"

tokio = { version = "0.2.22", features = ["full"] }
mini-redis = "0.2"

[dependencies.gfx-backend-vulkan]
version = "0.6.1"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.6.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.6.2"
optional = true


